--- a/bin/realAufgabe1/gui.fxml
+++ b/bin/realAufgabe1/gui.fxml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Text?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Type name and press enter" BorderPane.alignment="CENTER" />
    </top>
+   <bottom>
+      <Text fx:id="output" strokeType="OUTSIDE" strokeWidth="0.0" text="HIndex: " BorderPane.alignment="CENTER" />
+   </bottom>
    <center>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <top>
-            <TextField fx:id="input" onAction="#onEnterPressed" BorderPane.alignment="CENTER" />
-         </top>
-         <center>
-            <Text fx:id="output" strokeType="OUTSIDE" strokeWidth="0.0" text="HIndex: " BorderPane.alignment="CENTER" />
-         </center>
-      </BorderPane>
+      <TextField fx:id="input" onAction="#onEnterPressed" BorderPane.alignment="CENTER" />
    </center>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </BorderPane>
